--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
   "name": "studic",
+  "homepage": "https://DmitryDobro.github.io/StudicReact",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy":"vite build",
-    "deploy":"gh-pages -d dist",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.5",
+    "@reduxjs/toolkit": "^2.3.0",
+    "@types/react-redux": "^7.1.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.3.0",
     "redux": "^5.0.1",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.14.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
